fix background on mobile ~ https://stackoverflow.com/questions/26372127/background-fixed-no-repeat-not-working-on-mobile

--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,18 @@ blockquote {
 }
 
 @media screen and (max-width: 769px) {
+    body:before {
+        content: "";
+        display: block;
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -10;
+        background: linear-gradient(red, gold, green);
+      }
+
     .display-4 {
         font-size: 2rem;
         width: 90vw;
